--- a/aws_lab_setup/provision_lab.yml
+++ b/aws_lab_setup/provision_lab.yml
@@ -19,17 +19,19 @@
         - user_accounts
         - users
 
-- name: Configure control nodes
+- name: Configure control node
   hosts: control_nodes
   become: yes
   roles:
-    - control_node
+    - role: control_node
+      tags: control_node
 
 - name: Configure managed nodes
   hosts: managed_nodes
   become: yes
   roles:
-    - managed_node
+    - role: managed_node
+      tags: managed_node
 
 - name: Email inventory to students
   hosts: localhost
@@ -37,4 +39,5 @@
   become: no
   gather_facts: no
   roles:
-    - email
+    - role: email
+      tags: email
