Enable password authentication for ssh

--- a/aws_lab_setup/roles/managed_node/defaults/main.yml
+++ b/aws_lab_setup/roles/managed_node/defaults/main.yml
@@ -5,6 +5,11 @@ managed_node_config_options:
     validate: sshd -t -f %s
 
   - dest: /etc/ssh/sshd_config
+    regexp: '^#?PasswordAuthentication'
+    line: 'PasswordAuthentication yes'
+    validate: sshd -t -f %s
+
+  - dest: /etc/ssh/sshd_config
     regexp: '^#?UseDNS'
     line: 'UseDNS no'
     validate: sshd -t -f %s
