Move reboot to handlers

--- a/aws_lab_setup/roles/managed_node/handlers/main.yml
+++ b/aws_lab_setup/roles/managed_node/handlers/main.yml
@@ -2,3 +2,18 @@
   service:
     name: sshd
     state: restarted
+
+- name: reboot
+  shell: sleep 2 && reboot
+  async: 30
+  poll: 0
+
+- name: wait for instance
+  delegate_to: localhost
+  become: no
+  wait_for:
+    port: "{{ ssh_port }}"
+    host: "{{ ansible_host }}"
+    search_regex: OpenSSH
+    timeout: 500
+    delay: 40
