Add tags to tasks so inventory files get updated if password is changed

--- a/aws_lab_setup/roles/manage_ec2_instances/tasks/create.yml
+++ b/aws_lab_setup/roles/manage_ec2_instances/tasks/create.yml
@@ -64,6 +64,8 @@
   with_items: "{{ users }}"
   tags:
     - inventory
+    - users
+    - user_accounts
 
 - name: Generate instructor inventory
   template:
@@ -71,3 +73,5 @@
     dest: ./instructor_inventory.txt
   tags:
     - inventory
+    - users
+    - user_accounts
