Create role to configure control node

--- a/aws_lab_setup/provision_lab.yml
+++ b/aws_lab_setup/provision_lab.yml
@@ -27,7 +27,9 @@
   become: yes
   roles:
     - role: control_node
-      tags: control_node
+      tags:
+        - control_node
+        - control
 
 - name: Email inventory to students
   hosts: localhost
