--- a/aws_lab_setup/roles/user_accounts/tasks/main.yml
+++ b/aws_lab_setup/roles/user_accounts/tasks/main.yml
@@ -2,6 +2,9 @@
   group:
     name: "{{ username }}"
     state: present
+  tags:
+    - user_accounts
+    - users
 
 - name: Create User Account
   user:
@@ -11,3 +14,6 @@
     shell: /bin/bash
     state: present
     password: "{{ admin_password_hash }}"
+  tags:
+    - user_accounts
+    - users
