--- a/aws_lab_setup/teardown_lab.yml
+++ b/aws_lab_setup/teardown_lab.yml
@@ -4,9 +4,6 @@
   become: no
   gather_facts: no
   vars:
-    current_ssh_port: 22
-    ssh_port: 22
     ec2_exact_count: 0
   roles:
-    - role: manage_ec2_instances
-      tags: provision
+    - manage_ec2_instances
