--- a/aws_lab_setup/roles/common/tasks/main.yml
+++ b/aws_lab_setup/roles/common/tasks/main.yml
@@ -11,6 +11,7 @@
   tags:
     - ssh
     - sudo
+    - common
 
 - name: Install firewalld and libselinux-python
   yum:
@@ -21,6 +22,8 @@
   when:
     - "ansible_os_family == 'RedHat' or ansible_os_family == 'CentOS'"
     - "ansible_distribution_major_version | int >= 7"
+  tags:
+    - common
 
 - name: Disable SELinux
   selinux:
@@ -30,5 +33,9 @@
   notify:
     - reboot
     - wait for instance
+  tags:
+    - common
 
 - meta: flush_handlers
+  tags:
+    - common
