Set ssh_port to 22 if undefined

--- a/aws_lab_setup/roles/common/defaults/main.yml
+++ b/aws_lab_setup/roles/common/defaults/main.yml
@@ -1,7 +1,7 @@
 common_node_config_options:
   - dest: /etc/ssh/sshd_config
     regexp: '^#?Port'
-    line: Port {{ ssh_port }}
+    line: Port {{ ssh_port | default('22') }}
     validate: sshd -t -f %s
 
   - dest: /etc/ssh/sshd_config
