Use variable to control whether ec2 module waits or not
When creating new instances, wait is needed to ensure the public IP is
assigned and stored in the results used by subsequent tasks. When
tearing down the lab, it's not necessary to wait and much faster to
terminato VMs without waiting.

--- a/aws_lab_setup/roles/manage_ec2_instances/defaults/main.yml
+++ b/aws_lab_setup/roles/manage_ec2_instances/defaults/main.yml
@@ -5,6 +5,7 @@ ec2_vpc_id: vpc-06c9a463
 ec2_vpc_subnet_id: subnet-a2169ed5
 ec2_key_name: training
 ec2_exact_count: 1
+ec2_wait: yes
 
 ec2_instance_types:
   centos7:
