--- a/aws_lab_setup/roles/training_infra/defaults/main.yml
+++ b/aws_lab_setup/roles/training_infra/defaults/main.yml
@@ -10,12 +10,12 @@ install_ansible: yes
 
 instance_types:
   centos7:
-    ami_id: ami-61bbf104
+    ami_id: ami-af4333cf
     size: t2.micro
     os_type: linux
     disk_space: 10
   centos7-tower:
-    ami_id: ami-61bbf104
+    ami_id: ami-af4333cf
     size: t2.medium
     os_type: linux
     disk_space: 20
@@ -38,12 +38,12 @@ admin_password_hash: '$6$rounds=100000$W3Cs5AoklPdUV.Yg$hoRZfL/iVGGki9ZHVU2cXXOy
 
 types:
   - name: control
-    type: rhel7-tower
+    type: centos7-tower
   - name: node1
-    type: rhel7
+    type: centos7
   - name: node2
-    type: rhel7
+    type: centos7
   - name: node3
-    type: rhel7
+    type: centos7
   - name: haproxy
-    type: rhel7
+    type: centos7
